samples/_failures_safe/1761302042_e75687_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ba6b866.c: In function ‘main’:
./samples/SAFE/__tmp_3ba6b866.c:136:5: error: expected declaration or statement at end of input
  136 |     printf("=========================\n\n");
      |     ^~~~~~
